feat: 리뷰 사항 적용